<resources>
    <string name="app_name">Unit Convertor</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_0">0</string>
    <string name="text_00">00</string>
    <string name="text_.">.</string>
    <string name="text_C">C</string>
    <string name="equal">=</string>
    <string name="rest">\u27f2</string>
    <string name="del">\u232b</string>
    <string name="output_text">3.280</string>
    <string name="foot">Foot</string>
    <string name="foot_abb">ft</string>
    <string name="meter">Meter</string>
    <string name="meter_abb">m</string>
</resources>