<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColor"
    tools:context=".MainActivity">

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/input_card"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:neumorph_shapeType="pressed">

        <TextView
            android:id="@+id/inputResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/textColor"
            android:text="@string/text_1"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/inputText"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginStart="60dp"
            android:textColor="@color/textColor"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/meter"
            android:textSize="30sp" />

        <soup.neumorphism.NeumorphButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/meter_abb"
            android:textColor="@color/btn_text_color"
            android:textSize="25sp"
            app:neumorph_shadowColorLight="@color/shadowColorLight"
            app:neumorph_shadowColorDark="@color/shadowColorDark"/>

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/output_card"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_card"
        app:neumorph_shapeType="pressed">

        <TextView
            android:id="@+id/outputResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/textColor"
            android:text="@string/output_text"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/outputText"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_gravity="start"
            android:layout_marginStart="60dp"
            android:textColor="@color/textColor"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/foot"
            android:textSize="30sp" />

        <soup.neumorphism.NeumorphButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/foot_abb"
            android:textColor="@color/btn_text_color"
            android:textSize="25sp"
            app:neumorph_shadowColorLight="@color/shadowColorLight"
            app:neumorph_shadowColorDark="@color/shadowColorDark"/>

    </soup.neumorphism.NeumorphCardView>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output_card">

        <TableRow>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:text="@string/text_7"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"

                />
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:text="@string/text_8"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"

                />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_9"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:textColor="@color/textColor"
                android:gravity="center"
                android:text="@string/text_9"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"

                />

            <soup.neumorphism.NeumorphButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text="@string/meter_abb"
                android:textColor="@color/btn_text_color"
                android:textSize="25sp"
                android:visibility="invisible" />
        </TableRow>
        <TableRow>

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text="@string/text_4"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"
                />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text="@string/text_5"
                android:textColor="@color/textColor"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"

                />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text="@string/text_6"
                android:textColor="@color/textColor"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"
                />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_rest"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text="@string/rest"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"
                />
        </TableRow>

        <TableRow>

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text="@string/text_1"
                android:textColor="@color/textColor"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"
                />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text="@string/text_2"
                android:textColor="@color/textColor"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"
                />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text="@string/text_3"
                android:textColor="@color/textColor"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"
                />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_clear"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text="@string/text_C"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"
                />
        </TableRow>

        <TableRow>

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_00"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text="@string/text_00"
                android:textColor="@color/textColor"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"
                />

            <soup.neumorphism.NeumorphButton
                style="@style/Button_style"
                android:id="@+id/btn_0"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:text="@string/text_0"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_dot"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text="@string/text_."
                android:textColor="@color/textColor"
                style="@style/Button_style"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_equal"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:text="@string/del"
                app:neumorph_shadowColorLight="@color/shadowColorLight"
                app:neumorph_shadowColorDark="@color/shadowColorDark"
                style="@style/Button_style"
                />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>